[Auto] Publicar página de prueba: Software RD 933 y check-in en Málaga

--- a/test-pms-software-gestion-malaga.html
+++ b/test-pms-software-gestion-malaga.html
@@ -141,36 +141,36 @@
 </header>
   <main>
     <h1>PMS y Software de Gestión Hotelera en Málaga: Todo lo que Necesitas</h1>
-<p>La gestión de alquileres vacacionales en Málaga, una de las ciudades más visitadas de Andalucía, puede ser un proceso complicado. Un PMS (Property Management System) es una herramienta esencial que te ayuda a gestionar todas las operaciones de tu propiedad de manera eficiente. Estamos diseñando el PMS de gestión en la nube con todas las funcionalidades necesarias para garantizar que puedas gestionar tu alquiler vacacional de forma profesional. </p>
+<p>Si eres propietario de un alquiler vacacional en Málaga, sabrás lo complejo que puede ser gestionar reservas, clientes y el cumplimiento normativo. Un sistema de gestión de propiedades (PMS) se convierte en una herramienta esencial para optimizar estos procesos. Estamos diseñando el PMS de gestión en la nube con todas las funcionalidades necesarias para que puedas gestionar tu alquiler vacacional de forma profesional, simplificando tu trabajo y mejorando la experiencia de tus huéspedes.</p>
 <h2>¿Qué es un PMS (Property Management System)?</h2>
-<p>Un PMS es un software diseñado para simplificar la gestión de propiedades, especialmente en el sector hotelero y de alquiler vacacional. Permite a los propietarios manejar reservas, gestionar habitaciones, realizar check-ins digitales y facturar de manera eficiente. Estamos diseñando el PMS de gestión en la nube con todo lo que se necesita para proporcionar una experiencia integral en la administración de alquileres vacacionales en Málaga.</p>
+<p>Un PMS, o sistema de gestión de propiedades, es una plataforma que permite a los propietarios y administradores de alquileres vacacionales gestionar eficientemente sus operaciones. Esto incluye la gestión de reservas, habitaciones, check-in digital, facturación y más. Estamos diseñando el PMS de gestión en la nube con todo lo que se necesita para que tu operación sea fluida y profesional, facilitando cada aspecto de tu negocio.</p>
 <h2>Funcionalidades que Incluirá Nuestro PMS</h2>
-<p>Nuestro PMS ofrecerá una variedad de funcionalidades clave que facilitarán la gestión de tus propiedades. Entre ellas se encuentran:</p>
+<p>Nuestro PMS contará con una amplia gama de funcionalidades diseñadas para cubrir todas tus necesidades:</p>
 <ul>
-<li><strong>Gestión completa de reservas y calendario</strong>: Organiza tus reservas de manera sencilla y visualiza la disponibilidad en tiempo real.</li>
-<li><strong>Check-in digital y cumplimiento normativo (RD 933)</strong>: Agiliza el proceso de llegada de tus huéspedes y asegúrate de cumplir con la normativa local.</li>
-<li><strong>Microsite de reservas directas sin comisiones</strong>: Permite a tus huéspedes reservar directamente en tu sitio, evitando comisiones de terceros.</li>
-<li><strong>Facturación automática</strong>: Genera facturas de manera automática, lo que simplifica la gestión contable.</li>
-<li><strong>Gestión de múltiples propiedades</strong>: Si tienes varias propiedades, nuestro sistema te permitirá gestionarlas todas desde un solo lugar.</li>
-<li><strong>App móvil para gestión desde cualquier lugar</strong>: Mantente al tanto de tu negocio en todo momento, incluso desde tu smartphone.</li>
-<li><strong>Y mucho más...</strong></li>
+<li><strong>Gestión completa de reservas y calendario</strong>: Organiza y visualiza todas tus reservas en un solo lugar.</li>
+<li><strong>Check-in digital y cumplimiento normativo</strong>: Asegúrate de cumplir con el RD 933 mediante un proceso de check-in fácil y eficiente.</li>
+<li><strong>Microsite de reservas directas sin comisiones</strong>: Aumenta tus ingresos evitando las altas comisiones de plataformas de terceros.</li>
+<li><strong>Facturación automática</strong>: Genera facturas de manera automática y mantén tus cuentas al día.</li>
+<li><strong>Gestión de múltiples propiedades</strong>: Administra varias propiedades desde una única plataforma.</li>
+<li><strong>App móvil para gestión desde cualquier lugar</strong>: Toma el control de tu negocio desde tu smartphone, estés donde estés.</li>
+<li><strong>Y mucho más...</strong>: Estamos comprometidos en ofrecerte todas las herramientas necesarias para el éxito de tu negocio.</li>
 </ul>
 <h2>Por Qué Necesitas un PMS Profesional</h2>
-<p>En Málaga, la normativa de alquiler vacacional es estricta. El cumplimiento del RD 933 es crucial para evitar sanciones. Muchos propietarios enfrentan problemas relacionados con la gestión de reservas y la falta de transparencia en sus operaciones. Con nuestro PMS en la nube, abordarás estos desafíos de manera efectiva. Te proporcionaremos herramientas que no solo te ayudarán a cumplir con la ley, sino que también mejorarán la experiencia de tus huéspedes.</p>
+<p>El cumplimiento normativo es crucial en Málaga, especialmente con el RD 933, que establece ciertos requisitos para los alquileres turísticos. Propietarios que no cumplen con estas normativas pueden enfrentarse a sanciones significativas. Un PMS profesional no solo te ayudará a manejar reservas, sino que también te asistirá en la gestión de documentos requeridos para cumplir con la ley. Con nuestro PMS en la nube, podrás estar tranquilo sabiendo que tu negocio está en conformidad.</p>
 <h2>Estamos Diseñando el PMS Completo en la Nube</h2>
-<p>Estamos diseñando el PMS de gestión en la nube con todo lo que se necesita para gestionar tu alquiler vacacional de forma profesional. Este sistema no solo te ayudará a optimizar tus operaciones diarias, sino que también te proporcionará acceso a nuevas funcionalidades y actualizaciones constantes. Los primeros en apuntarse a nuestra lista de espera tendrán acceso prioritario y beneficios especiales, lo que te permitirá estar a la vanguardia en la gestión de tu alquiler vacacional.</p>
+<p>Estamos diseñando el PMS de gestión en la nube con todo lo que se necesita para que tu alquiler vacacional sea un éxito. Los primeros en apuntarse a nuestra lista de espera tendrán acceso prioritario y beneficios especiales. No pierdas la oportunidad de ser uno de los primeros en probar esta herramienta innovadora que transformará la manera en que gestionas tu propiedad.</p>
 <h2>Preguntas frecuentes sobre PMS</h2>
-<p><strong>1. ¿Qué es un PMS?</strong><br>Un PMS es un software que facilita la gestión de propiedades de alquiler, integrando funciones como reservas, facturación y cumplimiento normativo.</p>
-<p><strong>2. ¿Cuándo lanzaremos el PMS?</strong><br>Estamos trabajando arduamente y esperamos lanzar nuestro PMS en los próximos meses. Al registrarte en nuestra lista de espera, recibirás actualizaciones sobre el progreso.</p>
-<p><strong>3. ¿Qué incluirá el PMS?</strong><br>Incluirá herramientas para gestión de reservas, check-in digital, facturación automática, gestión de múltiples propiedades y mucho más.</p>
-<p><strong>4. ¿Cómo puedo apuntarme a la lista de espera?</strong><br>Puedes registrarte fácilmente en nuestra página web. Estarás entre los primeros en recibir información sobre el lanzamiento y beneficios exclusivos.</p>
+<p><strong>1. ¿Qué es un PMS y cómo puede beneficiarme?</strong><br>Un PMS es un sistema que centraliza la gestión de tus reservas y propiedades. Te ayuda a ahorrar tiempo y a cumplir con las normativas locales.</p>
+<p><strong>2. ¿Cuándo se lanzará el PMS?</strong><br>Estamos trabajando arduamente en el desarrollo y esperamos lanzarlo en los próximos meses. Únete a nuestra lista de espera para recibir actualizaciones.</p>
+<p><strong>3. ¿Qué funcionalidades incluirá el PMS?</strong><br>Nuestro PMS incluirá gestión de reservas, facturación automática, microsite de reservas, y mucho más. Todos los detalles serán comunicados a los que se apunten a la lista de espera.</p>
+<p><strong>4. ¿Cómo puedo apuntarme a la lista de espera?</strong><br>Simplemente visita nuestra página y completa el formulario para asegurarte un lugar en la lista de espera.</p>
 <h2>Datos locales útiles</h2>
-<p>Málaga, con su rica historia y atractivo turístico, cuenta con diversas normativas que regulan el alquiler vacacional. Aquí te dejamos algunos recursos útiles:</p>
-<ul>
-<li><strong>Consejería de Turismo de Andalucía</strong>: Proporciona información sobre normativas y requisitos para el alquiler vacacional en la región.</li>
-<li><strong>Asociación de Alquiler Vacacional de Málaga</strong>: Ofrece apoyo y recursos a propietarios para cumplir con las regulaciones locales y mejorar la gestión de sus propiedades.</li>
-<li><strong>Ayuntamiento de Málaga</strong>: Consulta sobre licencias y regulaciones específicas para alquileres vacacionales en la ciudad.</li>
-</ul>
+<h3>Normativa de alquileres turísticos en Málaga</h3>
+<p>La normativa de alquileres en Málaga está regulada por la Junta de Andalucía, que establece requisitos claros para los propietarios. Conocer y cumplir con estas regulaciones es crucial para evitar sanciones.</p>
+<h3>Organismos de apoyo</h3>
+<p>El Ayuntamiento de Málaga ofrece recursos para propietarios de apartamentos turísticos, incluyendo información sobre normativas y mejores prácticas.</p>
+<h3>Casuísticas locales</h3>
+<p>Con el aumento del turismo en Málaga, muchos propietarios han encontrado en un PMS la solución ideal para gestionar sus propiedades de manera eficiente, adaptándose a la demanda del mercado.</p>
 
     
 <section id="registro" style="background: linear-gradient(135deg, #44c0ff 0%, #2563eb 100%); border-radius: 24px; padding: 48px 24px; margin: 64px auto; max-width: 900px; box-shadow: 0 20px 60px rgba(37, 99, 235, 0.3);">
