[Auto] Publicar página de prueba: Software RD 933 y check-in en Málaga

--- a/test-pms-software-gestion-malaga-1.html
+++ b/test-pms-software-gestion-malaga-1.html
@@ -141,45 +141,50 @@
 </header>
   <main>
     <h1>PMS y Software de Gestión Hotelera en Málaga: Todo lo que Necesitas</h1>
-<p>La gestión de alquileres vacacionales en Málaga puede ser un desafío, especialmente con las crecientes normativas y expectativas de los huéspedes. Un <strong>Property Management System (PMS)</strong> es una herramienta clave que permite a los propietarios y administradores optimizar sus operaciones. Estamos diseñando el PMS de gestión en la nube con todas las funcionalidades necesarias para que puedas gestionar tu alquiler vacacional de forma profesional. </p>
+<p>La gestión de propiedades de alquiler vacacional en Málaga puede convertirse en un desafío sin las herramientas adecuadas. Un Sistema de Gestión de Propiedades (PMS) es una solución integral que permite a los propietarios y gerentes optimizar todas las operaciones relacionadas con sus alquileres. La buena noticia es que <strong>estamos diseñando el PMS de gestión en la nube con todas las funcionalidades necesarias</strong> para garantizar que tu alquiler vacacional funcione de manera profesional y eficiente. Desde la gestión de reservas hasta la facturación, un PMS es esencial para maximizar tus ingresos y proporcionar una experiencia excepcional a tus huéspedes.</p>
 <h2>¿Qué es un PMS (Property Management System)?</h2>
-<p>Un PMS es un software que ayuda a los propietarios y gestores de alquileres a simplificar y automatizar tareas críticas como la gestión de reservas, la atención al cliente y la facturación. Con nuestro PMS de gestión en la nube, tendrás acceso a herramientas que incluyen la gestión de reservas, el check-in digital, la facturación y mucho más. Esto no solo te ahorrará tiempo, sino que también mejorará la experiencia de tus huéspedes.</p>
+<p>Un PMS, o Sistema de Gestión de Propiedades, es una plataforma que ayuda a los propietarios y administradores de propiedades a gestionar sus operaciones diarias. Esto incluye la gestión de reservas, el control de habitaciones, el check-in digital y la facturación. En el contexto de alquileres vacacionales en Málaga, un PMS se convierte en una herramienta imprescindible para garantizar que todas las reservas y operaciones sean gestionadas de forma fluida y sin complicaciones. <strong>Estamos diseñando el PMS de gestión en la nube con todo lo que se necesita</strong> para facilitar cada una de estas funciones, permitiendo a los propietarios centrarse en lo que realmente importa: ofrecer una experiencia inolvidable a sus huéspedes.</p>
 <h2>Funcionalidades que Incluirá Nuestro PMS</h2>
-<p>Nuestro PMS está diseñado para ofrecerte un conjunto completo de herramientas, incluyendo:</p>
+<p>Nuestro PMS estará equipado con una amplia gama de funcionalidades clave que facilitarán la gestión de tus propiedades de alquiler vacacional:</p>
 <ul>
-<li><strong>Gestión completa de reservas y calendario:</strong> Mantén un control total sobre tus reservas en tiempo real.</li>
-<li><strong>Check-in digital y cumplimiento normativo (RD 933):</strong> Facilita el proceso de check-in cumpliendo con las normativas locales.</li>
-<li><strong>Microsite de reservas directas sin comisiones:</strong> Permite a tus huéspedes reservar directamente, ahorrándote comisiones de terceros.</li>
-<li><strong>Facturación automática:</strong> Genera facturas de forma sencilla y rápida.</li>
-<li><strong>Gestión de múltiples propiedades:</strong> Ideal para quienes gestionan varios alquileres.</li>
-<li><strong>App móvil para gestión desde cualquier lugar:</strong> Controla tu negocio de forma eficiente desde tu dispositivo móvil.</li>
-<li><strong>Y mucho más...</strong></li>
+<li><strong>Gestión completa de reservas y calendario</strong>: Organiza todas tus reservas en un solo lugar.</li>
+<li><strong>Check-in digital y cumplimiento normativo (RD 933)</strong>: Facilita el proceso de check-in y asegúrate de cumplir con la normativa vigente.</li>
+<li><strong>Microsite de reservas directas sin comisiones</strong>: Aumenta tus ingresos permitiendo que los huéspedes reserven directamente.</li>
+<li><strong>Facturación automática</strong>: Simplifica el proceso de facturación y evita errores.</li>
+<li><strong>Gestión de múltiples propiedades</strong>: Administra varias propiedades desde una única plataforma.</li>
+<li><strong>App móvil para gestión desde cualquier lugar</strong>: Mantente al tanto de tus operaciones estés donde estés.</li>
+<li><strong>Y mucho más...</strong>: Estamos comprometidos a ofrecer un PMS que se adapte a todas tus necesidades.</li>
 </ul>
 <h2>Por Qué Necesitas un PMS Profesional</h2>
-<p>La normativa RD 933 en Málaga exige que los propietarios de alquileres vacacionales cumplan con ciertos requisitos para operar legalmente. Sin un PMS adecuado, cumplir con estas normativas puede ser complicado y arriesgado. Por ejemplo, muchos propietarios han enfrentado sanciones por no llevar un control adecuado de sus reservas y datos de huéspedes. Nuestro PMS en la nube te ayudará a evitar estos problemas y asegurarte de que estás operando dentro del marco legal.</p>
+<p>La normativa RD 933 impone requisitos específicos para la gestión de alquileres vacacionales en Málaga. Muchos propietarios se enfrentan a desafíos para cumplir con estas regulaciones, lo que puede resultar en sanciones y pérdidas financieras. Un PMS profesional no solo facilita el cumplimiento de la normativa, sino que también ayuda a optimizar la gestión operativa. Por ejemplo, un propietario que utiliza un PMS puede asegurarse de que todos los datos de sus huéspedes se registren correctamente, evitando problemas legales y mejorando la experiencia del cliente. Con nuestro PMS en la nube, podrás resolver estos problemas de manera eficiente y efectiva.</p>
 <h2>Estamos Diseñando el PMS Completo en la Nube</h2>
-<p>Estamos diseñando el PMS de gestión en la nube con todo lo que se necesita para gestionar tu alquiler vacacional de forma profesional. Al unirte a nuestra lista de espera, serás uno de los primeros en acceder a este innovador sistema. Además, los primeros en apuntarse tendrán acceso prioritario y beneficios especiales que no querrás perderte.</p>
+<p><strong>Estamos diseñando el PMS de gestión en la nube con todo lo que se necesita</strong> para garantizar que tengas acceso a las mejores herramientas del sector. Al unirte a nuestra lista de espera, tendrás la oportunidad de ser uno de los primeros en acceder a esta innovadora plataforma y disfrutar de beneficios exclusivos. No pierdas la oportunidad de transformar la gestión de tu alquiler vacacional en Málaga.</p>
 <h2>Preguntas frecuentes sobre PMS</h2>
-<p><strong>1. ¿Qué es un PMS?</strong><br>Un PMS es un software que ayuda en la gestión de reservas, facturación y atención al cliente para alquileres vacacionales.</p>
-<p><strong>2. ¿Cuándo lanzarán el PMS?</strong><br>Estamos trabajando arduamente para lanzar el PMS en los próximos meses. Apúntate a la lista de espera para recibir actualizaciones.</p>
-<p><strong>3. ¿Qué incluirá el PMS?</strong><br>Incluirá funcionalidades como gestión de reservas, check-in digital, facturación automática, y más.</p>
-<p><strong>4. ¿Cómo puedo apuntarme a la lista de espera?</strong><br>Puedes unirte a la lista de espera a través de nuestro sitio web. ¡Te esperamos!</p>
+<p><strong>1. ¿Qué es un PMS?</strong><br>Un PMS es un sistema que permite gestionar todas las operaciones de una propiedad de alquiler vacacional, incluyendo reservas, facturación y cumplimiento normativo.</p>
+<p><strong>2. ¿Cuándo se lanzará el PMS?</strong><br>Estamos trabajando arduamente en el desarrollo de nuestro PMS y esperamos lanzarlo en el próximo trimestre. Únete a nuestra lista de espera para recibir actualizaciones.</p>
+<p><strong>3. ¿Qué incluirá el PMS?</strong><br>El PMS incluirá funcionalidades como gestión de reservas, facturación automática, check-in digital, y mucho más.</p>
+<p><strong>4. ¿Cómo puedo apuntarme a la lista de espera?</strong><br>Puedes unirte a nuestra lista de espera a través de nuestro sitio web, donde encontrarás un formulario sencillo para completar.</p>
 <h2>Datos locales útiles</h2>
-<ol>
-<li><strong>Ayuntamiento de Málaga:</strong> Ofrece información sobre las normativas locales para alquileres vacacionales y la importancia de cumplir con el RD 933.</li>
-<li><strong>Asociación de Alquileres Turísticos de Andalucía:</strong> Un recurso valioso para propietarios que buscan cumplir con las regulaciones y mejorar sus servicios.</li>
-<li><strong>Oficina de Turismo de Málaga:</strong> Proporciona datos sobre el flujo turístico y la demanda de alquileres vacacionales en la región.</li>
-</ol>
+<ul>
+<li><strong>Consejería de Turismo de Andalucía</strong>: Información sobre la regulación de alquileres vacacionales y recursos para propietarios.</li>
+<li><strong>Ayuntamiento de Málaga</strong>: Normativas locales sobre el alquiler turístico y contacto con servicios de apoyo a propietarios.</li>
+<li><strong>Asociación de Alquileres Turísticos de Málaga (AAT)</strong>: Ofrece información y recursos para propietarios sobre las mejores prácticas en la gestión de propiedades.</li>
+</ul>
 <pre><code class="language-json">{
   &quot;@context&quot;: &quot;https://schema.org&quot;,
   &quot;@type&quot;: &quot;Organization&quot;,
   &quot;name&quot;: &quot;PMS Málaga&quot;,
-  &quot;url&quot;: &quot;https://www.tusitio.com&quot;,
-  &quot;logo&quot;: &quot;https://www.tusitio.com/logo.png&quot;,
+  &quot;url&quot;: &quot;https://www.tusitioweb.com&quot;,
+  &quot;logo&quot;: &quot;https://www.tusitioweb.com/logo.png&quot;,
   &quot;sameAs&quot;: [
-    &quot;https://www.facebook.com/tusitio&quot;,
-    &quot;https://twitter.com/tusitio&quot;
-  ]
+    &quot;https://www.facebook.com/TuPagina&quot;,
+    &quot;https://www.twitter.com/TuCuenta&quot;
+  ],
+  &quot;contactPoint&quot;: {
+    &quot;@type&quot;: &quot;ContactPoint&quot;,
+    &quot;telephone&quot;: &quot;+34-123-456-789&quot;,
+    &quot;contactType&quot;: &quot;Customer Service&quot;
+  }
 }
 </code></pre>
 
