feat: añadir verificación de Google Search Console
- Añadir meta tag de verificación de Google Search Console
- Permite acceso a métricas, indexación y herramientas de Google Search Console

--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
   <meta http-equiv="content-language" content="es-ES">
   <meta name="language" content="Spanish">
   
-  <!-- Verification Tags (if needed in future) -->
-  <!-- <meta name="google-site-verification" content=""> -->
+  <!-- Verification Tags -->
+  <meta name="google-site-verification" content="la0lWTCw8dVHO0gJVS-QUXaRbqI2lEO13txFHzakZo8" />
   <!-- <meta name="msvalidate.01" content=""> -->
   <!-- <meta name="yandex-verification" content=""> -->
 
