--- a/articulos/multas-por-no-registrar-viajeros-espana.html
+++ b/articulos/multas-por-no-registrar-viajeros-espana.html
@@ -1489,7 +1489,7 @@
       
       // Scroll suave hacia la sección de waitlist
       setTimeout(() => {
-        const waitlistSection = document.getElementById('waitlist-section');
+        const waitlistSection = document.getElementById('registro');
         if (waitlistSection) {
           waitlistSection.scrollIntoView({ behavior: 'smooth', block: 'center' });
         }
