feat(faq): actualizar respuesta '¿Es gratis para siempre?' en todos los artículos
📝 ACTUALIZACIÓN DE FAQ

Cambiada la respuesta de la pregunta '¿Es gratis para siempre?' para mayor claridad legal:

Antes:
'Los primeros usuarios que se registren ahora tendrán acceso permanente al Plan Gratuito (Básico) sin coste mensual.'

Después:
'El Plan Básico está diseñado para ser gratuito sin coste mensual para los usuarios registrados dentro de la fase de lanzamiento, sujeto a los términos del servicio y al mantenimiento de la cuenta activa.'

Archivos actualizados:
- ✅ Landing page (index.html)
- ✅ Artículo 1: Multas por no registrar viajeros
- ✅ Artículo 2: Errores frecuentes SES

Pendiente:
- Artículo 3: Declaración informativa (próximo commit)

También:
- ✅ Eliminadas líneas vacías después de </html> en landing

Motivo: Mayor transparencia y claridad sobre los términos del plan gratuito.

--- a/index.html
+++ b/index.html
@@ -2403,7 +2403,7 @@
       <details>
         <summary>¿Es gratis para siempre?</summary>
         <p>
-          <strong>Los primeros usuarios que se registren ahora tendrán acceso permanente al Plan Gratuito (Básico) sin coste mensual.</strong>
+          El Plan Básico está diseñado para ser gratuito sin coste mensual para los usuarios registrados dentro de la fase de lanzamiento, sujeto a los términos del servicio y al mantenimiento de la cuenta activa.
           <br><br>
           Esto significa que mientras mantengas tu cuenta activa, no te cobraremos ningún coste mensual por el plan básico. El plan se financia mediante anuncios discretos en el panel de administración.
           <br><br>
@@ -4814,5 +4814,3 @@ ${message}`;
   <script src="https://admin.delfincheckin.com/referral-tracking.js"></script>
 </body>
 </html>
-
-
