--- a/articulos/declaracion-informativa-alquileres-corta-duracion-2026.html
+++ b/articulos/declaracion-informativa-alquileres-corta-duracion-2026.html
@@ -912,9 +912,21 @@
           <span style="font-size: 20px;">ℹ️</span> Plan Gratuito (Básico) - Incluye:
         </p>
         <ul style="text-align: left; margin: 0; padding-left: 20px; color: rgba(255,255,255,.95); line-height: 1.8;">
-          <li>✅ Gestión de reservas - Gestiona todas tus reservas desde un panel intuitivo</li>
-          <li>✅ Gestión de habitaciones o propiedades - Controla tu inventario</li>
-          <li>✅ Exportación de datos - CSV/Excel</li>
+          <li><strong>✅ Gestión de reservas</strong> - Gestiona todas tus reservas desde un panel intuitivo</li>
+          <li><strong>✅ Gestión de habitaciones o propiedades</strong> - Controla tu inventario</li>
+          <li><strong>✅ Exportación de datos</strong> - CSV/Excel</li>
+          <li><strong>✅ Panel de administración</strong> - Intuitivo y potente</li>
+          <li><strong>✅ Soporte por email</strong> - Siempre disponible</li>
+          <li><strong>✅ App móvil</strong> - iOS y Android (próximamente)</li>
+          <li><strong>🔗 Crea enlaces de pago personalizados</strong> - Define fechas, importe acordado y genera un enlace único de pago. Compártelo por WhatsApp o email y el huésped paga de forma segura. El dinero entra directamente en tu cuenta bancaria.</li>
+          <li><strong>🌐 Microsite para reservas directas</strong> - Crea en minutos una página pública para tu alojamiento, comparte el enlace en redes o con tus huéspedes y recibe reservas directas. Con pagos directos las comisiones se reducen y el dinero entra en tu cuenta sin esperas.</li>
+          <li><strong>💡 Financiado con anuncios</strong> - Elegantes y discretos, sin coste mensual para ti</li>
+          <li style="margin-top: 12px; padding-top: 12px; border-top: 2px solid rgba(255,255,255,.3);">
+            <strong style="font-size: 16px; color: #10b981;">🎁 Los primeros usuarios: tendrás acceso permanente al plan básico sin coste mensual</strong>
+          </li>
+          <li style="color: #fca5a5; font-size: 14px; margin-top: 12px; font-weight: 600;">
+            ❌ <strong>No incluye:</strong> Check-in digital (8€/mes) ni envío al Ministerio del Interior
+          </li>
         </ul>
       </div>
     </div>
