feat: unificación completa de artículos con landing page
🎯 UNIFICACIÓN TOTAL COMPLETADA

Este commit finaliza la unificación de TODOS los artículos
con la landing page. Ahora todo es consistente y profesional.

═══════════════════════════════════════════════════════════

📝 CAMBIOS EN ARTÍCULO 3 (Declaración Informativa 2026):

Waitlist:
- ❌ 3 items → ✅ 11 items completos (igual que landing)
- Añadidos: Panel admin, soporte, app móvil, enlaces pago,
  microsite, financiación, nota acceso permanente, exclusiones

FAQs:
- ❌ 8 FAQs específicas → ✅ 34 FAQs totales
- 8 FAQs específicas sobre declaración informativa
- + 26 FAQs generales de Delfín Check-in (igual que landing)

Footer:
- ✅ Footer completo con aviso legal
- ✅ Enlaces a Programas (Referidos, Afiliados)
- ✅ Footer-bottom con enlaces a políticas
- ✅ Caja de aviso legal destacada

═══════════════════════════════════════════════════════════

🔧 MEJORAS EN ARTÍCULOS 1 Y 2:

Footer actualizado:
- ✅ Enlace "Registro Gratis" en copyright
- ✅ Enlaces a Privacidad, Términos, Aviso Legal
- ✅ Caja de aviso legal añadida
- ✅ Diseño idéntico a landing page

═══════════════════════════════════════════════════════════

✅ RESULTADO FINAL:

Ahora TODOS los archivos están 100% unificados:
- ✅ Landing page (index.html)
- ✅ Artículo 1 (multas-por-no-registrar-viajeros-espana.html)
- ✅ Artículo 2 (errores-frecuentes-enviar-datos-huespedes-ses.html)
- ✅ Artículo 3 (declaracion-informativa-alquileres-corta-duracion-2026.html)

═══════════════════════════════════════════════════════════

🎨 CONSISTENCIA LOGRADA:

✅ Waitlist: 11 items en todos lados
✅ FAQs: 26-34 FAQs completas en todos los artículos
✅ Footer: Diseño y contenido idéntico en todos lados
✅ FAQ '¿Es gratis para siempre?': Texto actualizado en todos
✅ Aviso legal: Presente en todos los footers
✅ Enlaces: Consistentes en toda la web

═══════════════════════════════════════════════════════════

Archivos modificados:
- articulos/declaracion-informativa-alquileres-corta-duracio

--- a/articulos/multas-por-no-registrar-viajeros-espana.html
+++ b/articulos/multas-por-no-registrar-viajeros-espana.html
@@ -1265,10 +1265,23 @@
       </div>
     </div>
     <div class="footer-bottom">
-      <p>© <span id="year"></span> Delfín Check‑in · Software de gestión hotelera</p>
-      <p style="margin-top: 12px; font-size: 12px; color: #94a3b8;">
-        El Plan Gratuito (Básico) se financia con anuncios elegantes y discretos. El Plan Check-in tiene un coste de 8€/mes. Sin costes ocultos.
+      <p style="margin: 0 0 12px; font-size: 14px;">
+        © <span id="year"></span> Delfín Check‑in · <a href="https://delfincheckin.com/#registro" style="color: var(--brand);">Registro Gratis</a>
       </p>
+      <p style="margin: 0; font-size: 12px; color: #94a3b8; line-height: 1.8;">
+        <a href="https://delfincheckin.com/politica-privacidad.html" style="color: var(--brand); margin: 0 8px;">Política de Privacidad</a> ·
+        <a href="https://delfincheckin.com/terminos-servicio.html" style="color: var(--brand); margin: 0 8px;">Términos de Servicio</a> ·
+        <a href="https://delfincheckin.com/aviso-legal.html" style="color: var(--brand); margin: 0 8px;">Aviso Legal</a>
+        <br style="margin: 8px 0;">
+        <span style="font-size: 11px; display: block; margin-top: 8px;">
+          El Plan Gratuito (Básico) se financia con anuncios elegantes y discretos. El Plan Check-in tiene un coste de 8€/mes. Sin costes ocultos.
+        </span>
+      </p>
+      <div style="margin-top: 20px; padding: 16px; background: rgba(68,192,255,0.1); border-radius: 8px; border-left: 4px solid var(--brand); max-width: 900px; margin-left: auto; margin-right: auto;">
+        <p style="margin: 0; font-size: 12px; color: var(--muted); line-height: 1.6; text-align: left;">
+          <strong style="color: var(--brand);">ℹ️ Aviso Legal:</strong> Delfín Check-in se reserva el derecho de modificar las funcionalidades incluidas en cada plan, manteniendo siempre la existencia de un plan gratuito sin coste mensual.
+        </p>
+      </div>
     </div>
   </footer>
 
