fix: corregir inconsistencias visuales en artículos 2 y 3
🔧 CORRECCIONES FINALES:

═══════════════════════════════════════════════════════════

📝 ARTÍCULO 2 (errores-frecuentes-enviar-datos-huespedes-ses.html):

❌ Problema: FAQ #6 cortada (solo título, sin contenido)
✅ Solución:
- Añadido contenido completo para la sección 6
- Agregada sección de Conclusión antes de la waitlist
- Ahora termina correctamente como el artículo 1

═══════════════════════════════════════════════════════════

📝 ARTÍCULO 3 (declaracion-informativa-alquileres-corta-duracion-2026.html):

❌ Problema: Waitlist simple (sin hero completo)
✅ Solución:
- Reemplazada por el hero completo con gradient azul
- 11 items en la lista de beneficios
- Diseño idéntico a artículos 1 y 2

❌ Problema: Footer con estilos diferentes
✅ Solución:
- Reemplazado por footer idéntico a artículos 1 y 2
- Títulos <h4> en vez de <h3>
- Rutas absolutas (https://delfincheckin.com/...)
- Sin emoji en el título
- Estructura HTML idéntica

═══════════════════════════════════════════════════════════

✅ RESULTADO FINAL:

Ahora TODOS los artículos tienen:
- ✅ Hero de waitlist idéntico (gradient azul, 11 items)
- ✅ Footer idéntico (estructura, estilos, enlaces)
- ✅ Conclusión antes de la waitlist
- ✅ Diseño 100% consistente

═══════════════════════════════════════════════════════════

Archivos modificados:
- articulos/errores-frecuentes-enviar-datos-huespedes-ses.html
- articulos/declaracion-informativa-alquileres-corta-duracion-2026.html

--- a/articulos/errores-frecuentes-enviar-datos-huespedes-ses.html
+++ b/articulos/errores-frecuentes-enviar-datos-huespedes-ses.html
@@ -802,6 +802,31 @@
 
     <h2>6. Errores técnicos y de conexión</h2>
 
+    <p>Los problemas técnicos o de conexión durante el envío de datos al SES pueden hacer que tus partes de viajeros no se registren correctamente, incluso si toda la información es correcta.</p>
+
+    <h3>Errores comunes:</h3>
+    <ul>
+      <li><strong>Timeout o tiempo de espera agotado:</strong> La conexión con el SES se interrumpe antes de completar el envío</li>
+      <li><strong>Error 500 del servidor:</strong> Problemas en el servidor del Ministerio del Interior</li>
+      <li><strong>Conexión rechazada:</strong> El sistema SES no acepta la conexión por sobrecarga o mantenimiento</li>
+      <li><strong>Certificado SSL no válido:</strong> Problemas de seguridad en la comunicación</li>
+    </ul>
+
+    <h3>Cómo evitarlo:</h3>
+    <ul>
+      <li>Utiliza una conexión a internet estable y rápida</li>
+      <li>Evita enviar datos en horarios pico (primeras horas de la mañana suelen tener menos carga)</li>
+      <li>Si recibes un error, espera unos minutos y vuelve a intentarlo</li>
+      <li>Usa software actualizado con certificados de seguridad vigentes</li>
+      <li>Considera usar un PMS como <strong>Delfín Check-in</strong> que gestiona automáticamente los reintentos y verifica que cada envío se complete exitosamente</li>
+    </ul>
+
+    <h2>Conclusión</h2>
+
+    <p>Evitar estos errores frecuentes al enviar datos de huéspedes al SES no solo te ahorrará tiempo y dolores de cabeza, sino que también te protegerá de posibles sanciones por incumplimiento normativo.</p>
+
+    <p>La clave está en mantener un proceso ordenado, verificar siempre los datos antes de enviarlos y utilizar herramientas que automaticen y simplifiquen todo el proceso. Por eso desarrollamos <strong>Delfín Check-in</strong>: para que puedas centrarte en ofrecer una experiencia excepcional a tus huéspedes mientras el cumplimiento normativo se gestiona automáticamente.</p>
+
     <!-- Sección de Waitlist -->
     <section id="registro" class="section" style="background: linear-gradient(135deg, #44c0ff 0%, #2563eb 100%); border-radius: 24px; padding: 48px 24px; margin: 64px auto; max-width: 900px; box-shadow: 0 20px 60px rgba(37, 99, 235, 0.3);">
       <div style="text-align: center; color: white; margin-bottom: 32px;">
