--- a/articulos/errores-frecuentes-enviar-datos-huespedes-ses.html
+++ b/articulos/errores-frecuentes-enviar-datos-huespedes-ses.html
@@ -908,7 +908,6 @@
                 <li><strong>✅ App móvil</strong> - iOS y Android (próximamente)</li>
                 <li><strong>🔗 Crea enlaces de pago personalizados</strong> - Define fechas, importe acordado y genera un enlace único de pago. Compártelo por WhatsApp o email y el huésped paga de forma segura. El dinero entra directamente en tu cuenta bancaria.</li>
                 <li><strong>🌐 Microsite para reservas directas</strong> - Crea en minutos una página pública para tu alojamiento, comparte el enlace en redes o con tus huéspedes y recibe reservas directas. Con pagos directos las comisiones se reducen y el dinero entra en tu cuenta sin esperas.</li>
-                <li><strong>💡 Financiado con anuncios</strong> - Elegantes y discretos, sin coste mensual para ti</li>
                 <li style="margin-top: 12px; padding-top: 12px; border-top: 2px solid #bae6fd;">
                   <strong style="font-size: 16px; color: #059669;">🎁 Los primeros usuarios: tendrás acceso permanente al plan básico sin coste mensual</strong>
                 </li>
@@ -1306,7 +1305,7 @@
       </p>
       <div style="margin-top: 20px; padding: 16px; background: rgba(68,192,255,0.1); border-radius: 8px; border-left: 4px solid var(--brand); max-width: 900px; margin-left: auto; margin-right: auto;">
         <p style="margin: 0; font-size: 12px; color: var(--muted); line-height: 1.6; text-align: left;">
-          <strong style="color: var(--brand);">ℹ️ Aviso Legal:</strong> Delfín Check-in se reserva el derecho de modificar las funcionalidades incluidas en cada plan, manteniendo siempre la existencia de un plan gratuito sin coste mensual.
+          <strong style="color: var(--brand);">ℹ️ Aviso Legal:</strong> Delfín Check-in se reserva el derecho de modificar las funcionalidades incluidas en cada plan. El servicio mantendrá la disponibilidad de un plan gratuito sin coste mensual, con funcionalidades básicas, conforme a los Términos de Servicio vigentes en cada momento.
         </p>
       </div>
     </div>
