fix: hacer visible metadata en hero de artículos 1 y 2
🔧 CORRECCIÓN METADATA INVISIBLE

Este commit corrige el color de la metadata (fecha, tiempo, autor)
en el hero azul de los artículos 1 y 2.

═══════════════════════════════════════════════════════════

❌ PROBLEMA:

La metadata (📅 fecha, ⏱️ tiempo, ✍️ autor) NO se veía
en el hero azul de los artículos 1 y 2.

Causa:
- CSS tenía dos definiciones de .article-meta
- Primera: color: var(--muted) (gris oscuro)
- Segunda: sin color definido (heredaba el gris)
- Resultado: texto gris sobre fondo azul = invisible

═══════════════════════════════════════════════════════════

✅ SOLUCIÓN:

CSS actualizado:
.article-hero .article-meta {
  display: flex;
  gap: 20px;
  justify-content: center;
  font-size: 15px;
  opacity: 0.9;
  flex-wrap: wrap;
  color: white;  ← AÑADIDO
}

Ahora la metadata del hero usa su propio color (blanco)
y no hereda el gris de la metadata del artículo.

═══════════════════════════════════════════════════════════

✅ RESULTADO:

Ahora en los artículos 1 y 2 se ve correctamente:
- ✅ 📅 Fecha (blanco sobre azul)
- ✅ ⏱️ Tiempo de lectura (blanco sobre azul)
- ✅ ✍️ Autor (blanco sobre azul)
- ✅ Buena legibilidad y contraste

═══════════════════════════════════════════════════════════

Archivos modificados:
- articulos/multas-por-no-registrar-viajeros-espana.html
- articulos/errores-frecuentes-enviar-datos-huespedes-ses.html

--- a/articulos/multas-por-no-registrar-viajeros-espana.html
+++ b/articulos/multas-por-no-registrar-viajeros-espana.html
@@ -620,13 +620,14 @@
       margin-bottom: 20px;
     }
     
-    .article-meta {
+    .article-hero .article-meta {
       display: flex;
       gap: 20px;
       justify-content: center;
       font-size: 15px;
       opacity: 0.9;
       flex-wrap: wrap;
+      color: white;
     }
   </style>
 </head>
